--- a/test/fixtures/draws.yml
+++ b/test/fixtures/draws.yml
@@ -10,6 +10,7 @@
 #  last_result_seen :datetime
 #  created_at       :datetime         not null
 #  updated_at       :datetime         not null
+#  last_serie       :integer
 #
 
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
